tests/ui/parser/recover/recover-assoc-const-constraint.stderr
error[E0658]: associated const equality is incomplete
  --> $DIR/recover-assoc-const-constraint.rs:3:11
   |
LL |     bar::<Item = 42>();
   |           ^^^^^^^^^
   |
   = note: see issue #92827 <https://github.com/rust-lang/rust/issues/92827> for more information
   = help: add `#![feature(associated_const_equality)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: associated const equality is incomplete
  --> $DIR/recover-assoc-const-constraint.rs:5:11
   |
LL |     bar::<Item = { 42 }>();
   |           ^^^^^^^^^^^^^
   |
   = note: see issue #92827 <https://github.com/rust-lang/rust/issues/92827> for more information
   = help: add `#![feature(associated_const_equality)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
