tests/ui/parser/recover/recover-assoc-const-constraint.rs
#[cfg(false)]
fn syntax() {
    bar::<Item = 42>();
    //~^ ERROR associated const equality is incomplete
    bar::<Item = { 42 }>();
    //~^ ERROR associated const equality is incomplete
}

fn main() {}
